<resources>
    <string name="app_name">Nottach Xposed</string>
    <string name="dev">Nottach</string>
    <string name="donate">Donate</string>
    <string name="awesome">Awesome</string>
    <string name="clock">Clock</string>
    <string name="clock_and_date">Clock &#38; Date</string>
    <string name="color">Color</string>
    <string name="clock_color">Clock color</string>
    <string name="date_color">Date color</string>
    <string name="clock_date_color">Clock &#38; date color</string>
    <string name="current_clock_color">Current clock color</string>
    <string name="set_status_bar_clock_color">Set status bar clock color</string>
    <string name="set_notification_panel_clock_date_color">Set notification panel clock &#38; date color</string>
    <string name="current_date_color">Current date color</string>
    <string name="set_status_bar_date_color">Set status bar date color</string>
    <string name="am_pm_shown">Am pm is shown</string>
    <string name="am_pm_hidden">Am pm is hidden</string>
    <string name="statusbar_text_family">Typeface family</string>
    <string name="statusbar_text_family_summary">Set the type family of the statusbar font:\n%s</string>
    <string name="statusbar_text_style">Typeface style</string>
    <string name="statusbar_text_style_summary">Set the style of the statusbar font:\n%s</string>
    <string name="show_am_pm">Show AM PM</string>
    <string name="am_pm_style">AM PM Style</string>
    <string name="am_pm_style_summary">Choose clock am pm style:\n%s</string>
    <string name="battery">Battery</string>
    <string name="hide_full_battery_notification_shown">Full battery notification shown</string>
    <string name="hide_full_battery_notification_hidden">Full battery notification hidden</string>
    <string name="hide_full_battery_notification">Hide full battery notification</string>
    <string name="hide_battery_icon_shown">Battery icon is visible</string>
    <string name="hide_battery_icon_hidden">Battery icon is hidden</string>
    <string name="hide_battery_icon">Hide battery icon</string>
    <string name="use_circle_battery_icon_on">Using cicle battery icon</string>
    <string name="use_circle_battery_icon_off">Using stock battery icon</string>
    <string name="use_circle_battery_icon">Use circle battery icon</string>
    <string name="emergency_call_button_shown">Emergency call button shown</string>
    <string name="emergency_call_button_hidden">Emergency call button hidden</string>
    <string name="hide_emergency_call_button">Hide emergency call button</string>
    <string name="battery_text_color">Battery text color</string>
    <string name="set_battery_text_color">Set battery text color</string>
    <string name="circle_battery_color">Battery icon color</string>
    <string name="set_circle_battery_icon_color">Set circle battery icon color</string>
    <string name="carrier_label">Carrier Label</string>
    <string name="carrier_label_color">Carrier label color</string>
    <string name="set_carrier_label_color">Set carrier label color</string>
    <string name="hide_carrier_label">Hide carrier label</string>
    <string name="hide_carrier_label_shown">Carrier label shown</string>
    <string name="hide_carrier_label_hidden">Carrier label hidden</string>
    <string name="use_custom_carrier_label_shown">Custom carrier label</string>
    <string name="default_carrier_label">Leave empty for default carrier label</string>
    <string name="signal_icons">Signal Icons</string>
    <string name="select_signal_icon_set_summary">Choose status bar signal icon set:\n%s</string>
    <string name="select_signal_icon_set">Signal icon set</string>
    <string name="clock_size_summary">Set the statusbar clock text size</string>
    <string name="clock_size">Clock size</string>
    <string name="battery_size_summary">Set the statusbar battery text size</string>
    <string name="battery_size">Battery text size</string>
    <string name="carrier_size_summary">Set the statusbar carrier text size</string>
    <string name="carrier_size">Carrier label size</string>
    <string name="show_statusbar_clock_date_summary">Show the date with the status bar clock</string>
    <string name="show_statusbar_clock_date">Show status bar date</string>
    <string name="disable_loud_volume_enabled">Loud volume warning is enabled</string>
    <string name="disable_loud_volume_disabled">Loud volume warning is disabled (listening at loud volumes may damage your ears, use caution)</string>
    <string name="disable_loud_volume">Disable loud volume warning</string>
    <string name="select_nfc_icon_summary">Choose status bar &#38; quick panel NFC icon:\n%s</string>
    <string name="select_nfc_icon">NFC icon</string>
    <string name="hide_nfc_icon_off">NFC icon is shown</string>
    <string name="hide_nfc_icon_on">NFC icon is hidden</string>
    <string name="hide_nfc_icon">Hide NFC icon</string>
    <string name="att">AT&#38;T</string>
    <string name="global">Global</string>
    <string name="minimal">Minimal</string>
    <string name="att_icon">AT&#38;T icon</string>
    <string name="global_icon">Global icon</string>
    <string name="minimal_icon">Minimal icon</string>
    <string name="att_icons">AT&#38;T icon set</string>
    <string name="global_icons">Global icon set</string>
    <string name="minimal_icons">Minimal icon set</string>
    <string name="num_signal_bars_format">%d Bars</string>
    <string name="num_signal_bars_summary">Max number of signal bars to show</string>
    <string name="num_signal_bars">Signal bar count</string>
    <string name="quick_setting_columns_format">%d Tiles</string>
    <string name="quick_setting_columns_summary">Number of quick setting tiles per row</string>
    <string name="quick_setting_columns">Quick setting tiles</string>
    <string name="quick_settings">Quick Settings</string>
    <string name="quick_settings_custom_tile_color">Set tile background color</string>
    <string name="quick_settings_custom_tile_color_off">Custom tile background color disabled</string>
    <string name="quick_settings_custom_tile_color_on">Using below color as tile background and brightness slider background</string>
    <string name="quick_settings_disable_bluetooth_scan_dialog">Disable bluetooth toggle popup</string>
    <string name="quick_settings_disable_bluetooth_scan_dialog_off">Bluetooth scan dialog enabled</string>
    <string name="quick_settings_disable_bluetooth_scan_dialog_on">Bluetooth scan dialog disabled</string>
    <string name="quick_settings_disable_airplane_mode_dialog">Disable airplane mode toggle popup</string>
    <string name="quick_settings_disable_airplane_mode_dialog_off">Airplane mode dialog enabled</string>
    <string name="quick_settings_disable_airplane_mode_dialog_on">Airplane mode dialog disabled</string>
    <string name="quick_settings_custom_icon_color">Set icon color</string>
    <string name="quick_settings_custom_icon_color_off">Custom icon color disabled</string>
    <string name="quick_settings_custom_icon_color_on">Using below color as icon background</string>
    <string name="signal_custom_icon_color">Set signal icons color</string>
    <string name="signal_custom_icon_color_off">Custom signal icons color disabled</string>
    <string name="signal_custom_icon_color_on">Using below color for signal icons</string>
    <string name="disable_tether_provisioning">Disable tether provisioning</string>
    <string name="disable_tether_provisioning_off">Tether provisioning is enabled</string>
    <string name="disable_tether_provisioning_on">Tether provisioning is enabled</string>
    <string name="status_custom_icon_color">Set status bar icons color</string>
    <string name="status_custom_icon_color_off">Custom status bar icons color disabled</string>
    <string name="status_custom_icon_color_on">Using below color for status bar icons</string>
    <string name="signal_icon_color_summary">Set a custom signal icons color</string>
    <string name="signal_icon_color">Signal icons color</string>
    <string name="status_icon_color_summary">Set a custom color for remaining statusbar icons</string>
    <string name="status_icon_color">Statusbar icons color</string>
    <string name="quick_settings_hide_indicators">Hide indicator bars</string>
    <string name="quick_settings_indicators_shown">Indicator bars are shown</string>
    <string name="quick_settings_indicators_hidden">Indicator bars are hidden</string>
    <string name="quick_settings_hide_text_labels">Hide text labels</string>
    <string name="quick_settings_text_labels_shown">Text labels are shown</string>
    <string name="quick_settings_text_labels_hidden">Text labels are hidden</string>
    <string name="clock_date_application">Clock &#38; date application</string>
    <string name="clock_date_application_summary">App to launch when notification clock and date is clicked</string>
    <string name="clock_date_long_application">Clock &#38; date longpress application</string>
    <string name="clock_date_long_application_summary">App to launch when notification clock and date is longpressed</string>
    <string name="statusbar">Status Bar</string>
    <string name="status_icons">Status Icons</string>
    <string name="themes">Themes</string>
    <string name="notifications">Notifications</string>
    <string name="notification_panel">Notification Panel</string>
    <string name="general">General</string>
    <string name="framework">Framework</string>
    <string name="nottach_xposed_header">NottachXposed is made for the AT&#38;T Galaxy S4 and is not guaranteed to work on other devices.</string>
    <string name="nottach_xposed_thanks">Thanks to rovo89 for his Xposed Framework.\nThis app includes parts of TweakBox, also by rovo89.</string>
    <string name="reboot">Reboot</string>
    <string name="credits">Credits</string>
    <string name="hide">Hide</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="regular">Regular</string>
    <string name="light">Light</string>
    <string name="condensed">Condensed</string>
    <string name="thin">Thin</string>
    <string name="italic">Italic</string>
    <string name="normal">Normal</string>
    <string name="bold">Bold</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="center">Center</string>
    <string name="clock_position">Clock position</string>
    <string name="clock_position_summary">Choose clock position:\n%s</string>
    <string name="background_color">Background color</string>
    <string name="header_background_color">Header background color</string>
    <string name="header_button_color">Header button color</string>
    <string name="clear_background_color">Clear button background color</string>
    <string name="panel_background_color">Panel background color</string>
    <string name="panel_background">Panel background</string>
    <string name="notification_background_color">Notification background color</string>
    <string name="notification_pressed_color">Notification pressed color</string>
    <string name="handle_color">Bar color</string>
    <string name="tile_background_color">Tile background color</string>
    <string name="tile_pressed_color">Tile pressed color</string>
    <string name="title_bar_background_color">Title bar background color</string>
    <string name="tile_text_color">Tile text color</string>
    <string name="title_bar_text_color">Title bar text color</string>
    <string name="mint_jelly">Mint Jelly</string>
    <string name="enabled_call_recording">Enable call recording</string>
    <string name="enabled_call_recording_off">Call recording is disabled</string>
    <string name="enabled_call_recording_on">Call recording is enabled</string>
    <string name="phone">Phone</string>
    <string name="power">Power</string>
</resources>